finished sprint 25 notes

--- a/docs/planning/2021/sprints/sprint 25/12-14-to-12-24.md
+++ b/docs/planning/2021/sprints/sprint 25/12-14-to-12-24.md
@@ -1,4 +1,4 @@
-# Sprint plan Tuesday December 14 to December 4
+# Sprint plan Tuesday December 14 to December 24
 
 ## Goal/notes for Sprint
 
@@ -15,9 +15,12 @@
 - Gayathri out:
   - Friday December 17th
 
+- Surrenders last day was 12-24-2021 - in six months he did a lot!
+
 ### Deliverables
 
-- added at the end of the sprint
+- most of the delivarables below were achived! minor exceptions not worth mentioning
+- way to go team!
 
 ---
 
