--- a/docs/planning/2021/sprints/sprint 25/12-14-to-12-24.md
+++ b/docs/planning/2021/sprints/sprint 25/12-14-to-12-24.md
@@ -21,6 +21,10 @@
 
 - most of the delivarables below were achived! minor exceptions not worth mentioning
 - way to go team!
+- this is the last entry for a sprint in 2021 - sprint 26 starts in 2021 but ends in 2022 therefore 25 is the last sprint of the 2021 - its been a tough year for Geppetto - lost 2 long time people - Kishan in Jan which hurt and JP in October - the worst impact was the constant cycling of people through the project - can't do this - my mistake for allowing it
+
+- even though it was a tough year enough was completed that at the end of the year we are in cleanup mode so that in about 3-4 sprints, maybe less, we will truely go live so not all bad!
+
 
 ---
 
