--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -1,8 +1,8 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday December 28 to January 07
 
 ## Goal/notes for Sprint
 
-1. start BETA-24
+1. start BETA-26
 
 ---
 
@@ -12,8 +12,6 @@
 
 ### General personnel updates
 
-- Gayathri out:
-  - Friday December 17th
 
 ### Deliverables
 
@@ -21,41 +19,37 @@
 
 ---
 
-## UX Assignments
+## Tansient Team Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - work with Surrender and Gayathri
-    - need to create screens like Grapedrop - what is missing? do this by using the electricglide screens
-    - start to work on ideas for Geppetto website using the 10d color scheme 
+  - work Gayathri
+  - finish creating the new Geppetto website landong page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d
+
+- Naveen
+  - Cloud Consumption
+  This will allow Geppetto to monitor the costs of deployed applications to Fargate and thus provide the basis for billing clients
+
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Harish
-  - work on GCAM
-    - finish GCAM against gjs based screens
-    - authorization screen - adding ability to update the roles assigned to screens - as of Friday December 17th - this proved challenging with agGrid tre view
-  - clean up the Admin menu in all templates
-    - admin menu should NOT be have a sub0menu instead it should launch the Admin page
-  - special pivot for second weeks of sprint 
-  this is due to the progress made by Surrender in adding latest version of gjs (.17.29) and working with Ajith and Gayathri to improve the ability of screen designer to create screens that are close to what is possible in GrapeDrop (example is the electric glide)
-    - test the Angular v13 generator with Surrender for its ability to support gjs (CSS/HTML) with gjs version .17.29
+- Harish  
+  - finalize Angular 13 generation clean up with GJS .17.29 working with Gayathri
+  - continue with general clean up - aka - desktop to web folders
+  - start with eliminating deprecation warnings in generated Node components
+  - upgrade all node to latest LTS
 
-- Surrender
-  - focus on screen designer and KT
-  
-- Saranya
-  - work on user management for generated applications
-  
+
 - Gayathri
-  - GrapesJS kt
-  - version .17.29 using agGrid component prepare separate repo to be used for marketing (medium/video)
-  - work with Ajith on GrapeDrop KT as an example of what screen designer should approximate
-  - test Geppetto code with .17.29
+  - finalize Angular 13 generation clean up with GJS .17.29 working with Harish
+  - finalize TagManager in screen designer to the point that the generator has everything it needs to generate TagManage
+  - (TBD) fix the AgGrid in generated applications authoriation screens to use tree component - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar 
 
+- Saranya
+  - finish user management for generated applications
 
 ---
 
@@ -64,4 +58,4 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - stop deploying v7 of Geppetto and start deploying new version daily
+  - support daily deployments
