--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -31,7 +31,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Cloud Consumption
   This will allow Geppetto to monitor the costs of deployed applications to Fargate and thus provide the basis for billing clients
 
-
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
@@ -46,7 +45,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Gayathri
   - finalize Angular 13 generation clean up with GJS .17.29 working with Harish
   - finalize TagManager in screen designer to the point that the generator has everything it needs to generate TagManage
-  - (TBD) fix the AgGrid in generated applications authoriation screens to use tree component - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar 
+  - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
+  - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
 - Saranya
   - finish user management for generated applications
