--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -25,7 +25,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Ajith
   - work Gayathri
-  - finish creating the new Geppetto website landong page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d
+  - finish creating the new Geppetto website landing page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d
 
 - Naveen
   - Cloud Consumption
@@ -41,10 +41,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - start with eliminating deprecation warnings in generated Node components
   - upgrade all node to latest LTS
 
-
 - Gayathri
   - finalize Angular 13 generation clean up with GJS .17.29 working with Harish
-  - finalize TagManager in screen designer to the point that the generator has everything it needs to generate TagManage
+  - finalize TagManager in screen designer to the point that the generator has everything it needs to generate TagManager
   - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
