--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -12,14 +12,13 @@
 
 ### General personnel updates
 
-
 ### Deliverables
 
 - added at the end of the sprint
 
 ---
 
-## Tansient Team Assignments
+## Transient Team Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
