--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -12,6 +12,9 @@
 
 ### General personnel updates
 
+- Saranya
+  -Wednesday December 29th was her last active day in Geppetto team
+
 ### Deliverables
 
 - added at the end of the sprint
@@ -47,7 +50,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
 - Saranya
-  - finish user management for generated applications
+  - finish user management for generated applications - NOTE: she mostly completed this - there was one last issue left with the pictures that Harish was checking on
 
 ---
 
