sprint planning notes

--- a/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
+++ b/docs/planning/2022/sprints/sprint 01/12-28-to-01-07.md
@@ -6,18 +6,10 @@
 
 ---
 
-## Sprint completion notes
-
-- added at the end of the sprint
-
-### General personnel updates
+## General Sprint completion notes and personnel updates
 
 - Saranya
   -Wednesday December 29th was her last active day in Geppetto team
-
-### Deliverables
-
-- added at the end of the sprint
 
 ---
 
@@ -26,22 +18,23 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - work Gayathri
-  - finish creating the new Geppetto website landing page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d
+  - work Gayathri - end of sprint notes: accomplished various see github
+  - finish creating the new Geppetto website landing page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d - end of sprint notes: busy with other things plus there was a bug in Geppetto with image uploads whish was solved - bottom line this is continuing in the next sprint
 
 - Naveen
   - Cloud Consumption
   This will allow Geppetto to monitor the costs of deployed applications to Fargate and thus provide the basis for billing clients
+  - end of sprint notes: we have simple POC that allows us to monitor costs per Fargate deployed application- this work pointed to the need for further work to learn how to start and stop apps which will be picked up in the next sprint
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish  
-  - finalize Angular 13 generation clean up with GJS .17.29 working with Gayathri
-  - continue with general clean up - aka - desktop to web folders
-  - start with eliminating deprecation warnings in generated Node components
-  - upgrade all node to latest LTS
+  - finalize Angular 13 generation clean up with GJS .17.29 working with Gayathri - end of sprint notes: completed
+  - continue with general clean up - aka - desktop to web folders - end of sprint notes: in progress good progress
+  - start with eliminating deprecation warnings in generated Node components - end of sprint notes: not started going to shift this to Rakesh
+  - upgrade all node to latest LTS - end of sprint notes: not started going to shift this to Rakesh
 
 - Gayathri
   - finalize Angular 13 generation clean up with GJS .17.29 working with Harish
