--- a/docs/planning/2022/sprints/sprint 02/01-11-to-01-21.md
+++ b/docs/planning/2022/sprints/sprint 02/01-11-to-01-21.md
@@ -8,6 +8,12 @@
 
 ## General Sprint completion notes and personnel updates
 
+- Team was for Pongal on 1/14/2022
+- Attempted to start using Imran and Naveen K for Geppetto while they are on the bench
+  - started this around Wednesday 01/19/2022 
+- Imran was out on Friday 01/21/2022
+- Ajith has been busy with other tasks
+
 ---
 
 ## Transient Team Assignments
