--- a/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
+++ b/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
@@ -8,6 +8,8 @@
 
 ## General Sprint completion notes and personnel updates
 
+- Team was off for republic day Jan 26
+
 ---
 
 ## Transient Team Assignments
@@ -18,7 +20,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - finish creating the new Geppetto website landing page in Geppetto. We are using this as a test of the newly added capabilities with the latest version that Surrender worked on before he left 10d
 
 - Naveen
-  - Start and Stopping Fargate Apps
   - Deploy Geppetto to Fargate - we will use Geppetto to test Start, Stop methods/code
 
 ## Developer Assignments
@@ -26,26 +27,27 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - Merge Current React generator to Stage
-  we should be able to generate react code from stage
-  - upgrade stage to latest Mongo version
-  it is ok to delete all existing projects if that is faster
-  - EFK for generated apps 
-  we need to show logs using EFK - this is part of cleanup
-
-- Gayathri
-  - add template manager to geppetto
-  - add menu builder to geppetto
+  - start to generate React on a regular basis
+  - fix the ongoing issue with saving screens that Ajith keeps reporting
+  - fix any issue with performance with generating React
+  - start sharable feature manager (screen saving and React take priority)
   
+- Gayathri
+  - fix the ongoing issue with saving screens that Ajith keeps reporting
+  - finish menu builder in geppetto
+  - start UI for Sharable Feature Manager(after the screen designer issues are solved)
+  - (TBD)fix navigation issues in Geppetto
+
 - Rakesh
-  - continue Node learning
-  - start with Handlebars
-   -need to create sample version like what we have done for simple GJS for Medium article - speak with Gayathri and Dan
-  - (TBD) start with eliminating deprecation warnings in generated Node components
-  - (TBD) upgrade all node to latest LTS
+  - finish with Handlebars
+    - create sample version like what we have done for simple GJS for Medium article - speak with Gayathri and Dan
+  - start working with React generated code
+  - start to learn the React/Backend Generation Manager
 
 - Dominic
-  - continue to learn Angular
+  - finish learning Angular
+  - start learning GrapeJS
+  - add new about page component and OSS page (list) for Geppetto
   - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
