--- a/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
+++ b/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
@@ -43,6 +43,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - create sample version like what we have done for simple GJS for Medium article - speak with Gayathri and Dan
   - start working with React generated code
   - start to learn the React/Backend Generation Manager
+    - use this exploration to migrate to the FETCH library and add proper logging
 
 - Dominic
   - finish learning Angular
