last cut of sprint28 plan releasing to devs

--- a/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
+++ b/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
@@ -27,9 +27,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - start to generate React on a regular basis
   - fix the ongoing issue with saving screens that Ajith keeps reporting
-  - fix any issue with performance with generating React
+  - start to generate React on a regular basis
+    - fix any issue with performance with generating React
   - start sharable feature manager (screen saving and React take priority)
   
 - Gayathri
@@ -40,8 +40,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Rakesh
   - finish with Handlebars
-    - create sample version like what we have done for simple GJS for Medium article - speak with Gayathri and Dan
-  - start working with React generated code
+    - create sample version like what we have done for simple GJS for Medium article - speak with Gayathri, Harish and Dan
+  - start working with React generated code (this depends on Harish implementing Kishan short term fix for speed issue)
+  - update all Geppetto images to latest Node LTS
   - start to learn the React/Backend Generation Manager
     - use this exploration to migrate to the FETCH library and add proper logging
 
