starting plan for sprint 29

--- a/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
+++ b/docs/planning/2022/sprints/sprint 03/01-25-to-02-04.md
@@ -9,6 +9,7 @@
 ## General Sprint completion notes and personnel updates
 
 - Team was off for republic day Jan 26
+- NaveenLingam resigned from 10d - last day was Jan 31st
 
 ---
 
