--- a/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
+++ b/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
@@ -1,8 +1,8 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday Feb 08 to Feb 18
 
 ## Goal/notes for Sprint
 
-1. start BETA-24
+1. start BETA-29
 
 ---
 
@@ -12,8 +12,7 @@
 
 ### General personnel updates
 
-- Gayathri out:
-  - Friday December 17th
+updated as the sprint progresses
 
 ### Deliverables
 
@@ -35,27 +34,23 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - work on GCAM
-    - finish GCAM against gjs based screens
-    - authorization screen - adding ability to update the roles assigned to screens - as of Friday December 17th - this proved challenging with agGrid tre view
-  - clean up the Admin menu in all templates
-    - admin menu should NOT be have a sub0menu instead it should launch the Admin page
-  - special pivot for second weeks of sprint 
-  this is due to the progress made by Surrender in adding latest version of gjs (.17.29) and working with Ajith and Gayathri to improve the ability of screen designer to create screens that are close to what is possible in GrapeDrop (example is the electric glide)
-    - test the Angular v13 generator with Surrender for its ability to support gjs (CSS/HTML) with gjs version .17.29
+  - Sharable Features
 
-- Surrender
-  - focus on screen designer and KT
-  
-- Saranya
-  - work on user management for generated applications
-  
 - Gayathri
-  - GrapesJS kt
-  - version .17.29 using agGrid component prepare separate repo to be used for marketing (medium/video)
-  - work with Ajith on GrapeDrop KT as an example of what screen designer should approximate
-  - test Geppetto code with .17.29
+  - finish sharable features UI
+  - Hour of Power
+    - start learning Node
 
+- Dominic
+  - Finish GrapesJS
+  - Finish Angular
+  - start first Geppetto component
+    - add new about page component and OSS page (list) for Geppetto
+  - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
+  - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
+
+- Rakesh
+  - yyyy
 
 ---
 
