--- a/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
+++ b/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
@@ -38,6 +38,10 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Gayathri
   - finish sharable features UI
+  - start using GCAM in Geppetto app
+    - remove Camunda
+  - take one last crack at multi-select
+  - (TBD) MicroFront ends
   - Hour of Power
     - start learning Node
 
