--- a/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
+++ b/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
@@ -35,10 +35,16 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Harish
   - Sharable Features
+    - finish SharedFeaturesManager (task 1504) first cut deployed to stage
+    - maybe start SharedFeaturesGenManager (task 1505) this is a stretch goal
+  - deploy first cut of new website to S3
+  - spend time with Azure cert team (not too much time maybe 1 or 2 hours)
+  - (TBD) start using GCAM in Geppetto app - prep for removing it from generated applications
+    - remove Camunda
 
 - Gayathri
   - finish sharable features UI
-  - start using GCAM in Geppetto app
+  - start using GCAM in Geppetto app - prep for removing it from generated applications
     - remove Camunda
   - (TBD) new sharable component - Stripe Payments (https://github.com/stripe-samples/checkout-one-time-payments)
   - (TBD) take one last crack at multi-select
@@ -49,13 +55,16 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Dominic
   - Finish GrapesJS
   - Finish Angular
+  - work with Dan on the Geppetto website app
   - start first Geppetto component
     - add new about page component and OSS page (list) for Geppetto
   - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
 - Rakesh
-  - yyyy
+  - REACT
+    - admin pages for generated app
+  - (TBD) activating Vault for DB credentials
 
 ---
 
@@ -64,4 +73,4 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - stop deploying v7 of Geppetto and start deploying new version daily
+  - deploy geppetto daily
