start of gepPayments design

--- a/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
+++ b/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
@@ -56,12 +56,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Finish GrapesJS
   - Finish Angular
   - work with Dan on the Geppetto website app
+    - learn how to deploy to S3
   - start first Geppetto component
     - add new about page component and OSS page (list) for Geppetto
   - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
 - Rakesh
+  - finish Handlebars POC (node, docker)
   - REACT
     - admin pages for generated app
   - (TBD) activating Vault for DB credentials
