final for sprint 29 plan

--- a/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
+++ b/docs/planning/2022/sprints/sprint 04/02-08-to-02-18.md.md
@@ -25,32 +25,32 @@ updated as the sprint progresses
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - work with Surrender and Gayathri
-    - need to create screens like Grapedrop - what is missing? do this by using the electricglide screens
-    - start to work on ideas for Geppetto website using the 10d color scheme 
+  - work on standardizing social media UI for Geppetto
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
+  - bugs are they appear BUT only critical bugs
   - Sharable Features
     - finish SharedFeaturesManager (task 1504) first cut deployed to stage
     - maybe start SharedFeaturesGenManager (task 1505) this is a stretch goal
   - deploy first cut of new website to S3
-  - spend time with Azure cert team (not too much time maybe 1 or 2 hours)
+  - spend time with Azure cert team (not too much time maybe 1 or 2 hours for the whole sprint)
   - (TBD) start using GCAM in Geppetto app - prep for removing it from generated applications
     - remove Camunda
 
 - Gayathri
+  - bugs are they appear BUT only critical bugs
   - finish sharable features UI
   - start using GCAM in Geppetto app - prep for removing it from generated applications
     - remove Camunda
+  - Hour of Power
+    - start learning Node
   - (TBD) new sharable component - Stripe Payments (https://github.com/stripe-samples/checkout-one-time-payments)
   - (TBD) take one last crack at multi-select
   - (TBD) MicroFront ends
-  - Hour of Power
-    - start learning Node
 
 - Dominic
   - Finish GrapesJS
@@ -63,7 +63,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
 
 - Rakesh
-  - finish Handlebars POC (node, docker)
+  - finish Handlebars POC (node, typescript, docker)
   - REACT
     - admin pages for generated app
   - (TBD) activating Vault for DB credentials
