--- a/docs/planning/2022/sprints/sprint 05/02-22-to-03-04.md
+++ b/docs/planning/2022/sprints/sprint 05/02-22-to-03-04.md
@@ -1,8 +1,8 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday Feb 22 to March 04
 
 ## Goal/notes for Sprint
 
-1. start BETA-24
+1. start BETA-30
 
 ---
 
@@ -12,8 +12,9 @@
 
 ### General personnel updates
 
-- Gayathri out:
-  - Friday December 17th
+- Harish out:
+  - Monday Feb 28th
+  - Tuesday March 1st
 
 ### Deliverables
 
