--- a/docs/planning/2022/sprints/sprint 05/02-22-to-03-04.md
+++ b/docs/planning/2022/sprints/sprint 05/02-22-to-03-04.md
@@ -18,8 +18,7 @@
 
 ### Deliverables
 
-- added at the end of the sprint
-
+- started the planning for heatlMonk
 ---
 
 ## UX Assignments
@@ -27,36 +26,44 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - work with Surrender and Gayathri
-    - need to create screens like Grapedrop - what is missing? do this by using the electricglide screens
-    - start to work on ideas for Geppetto website using the 10d color scheme 
+  - work on standardizing social media UI for Geppetto
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - work on GCAM
-    - finish GCAM against gjs based screens
-    - authorization screen - adding ability to update the roles assigned to screens - as of Friday December 17th - this proved challenging with agGrid tre view
-  - clean up the Admin menu in all templates
-    - admin menu should NOT be have a sub0menu instead it should launch the Admin page
-  - special pivot for second weeks of sprint 
-  this is due to the progress made by Surrender in adding latest version of gjs (.17.29) and working with Ajith and Gayathri to improve the ability of screen designer to create screens that are close to what is possible in GrapeDrop (example is the electric glide)
-    - test the Angular v13 generator with Surrender for its ability to support gjs (CSS/HTML) with gjs version .17.29
+  - bugs are they appear BUT only critical bugs
+   - END OF SPRINT COMMENTS: 
+  - Sharable Features
+    - finish SharedFeaturesManager (task 1504) first cut deployed to stage
+      - END OF SPRINT COMMENTS:
+  - (TBD) start using GCAM in Geppetto app - prep for removing it from generated applications
+    - (TBD) remove Camunda
 
-- Surrender
-  - focus on screen designer and KT
-  
-- Saranya
-  - work on user management for generated applications
-  
 - Gayathri
-  - GrapesJS kt
-  - version .17.29 using agGrid component prepare separate repo to be used for marketing (medium/video)
-  - work with Ajith on GrapeDrop KT as an example of what screen designer should approximate
-  - test Geppetto code with .17.29
+  - bugs are they appear BUT only critical bugs
+    - END OF SPRINT COMMENTS: 
+   - Hour of Power
+    - start learning Node
+  - (TBD) new sharable component - Stripe Payments (https://github.com/stripe-samples/checkout-one-time-payments)
+  - (TBD) take one last crack at multi-select
+  - (TBD) MicroFront ends
 
+- Dominic
+  - Shareable Features UI
+  - About Box
+  - OSS Attribution
+  - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
+  - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
+
+- Rakesh
+  - REACT
+    - admin pages for generated app
+    - END OF SPRINT COMMENTS:
+  - finish Handlebars POC (node, typescript, docker)
+    - END OF SPRINT COMMENTS:
+  - (TBD) activating Vault for DB credentials
 
 ---
 
@@ -65,4 +72,5 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - stop deploying v7 of Geppetto and start deploying new version daily
+  - deploy geppetto daily
+  - had issues with expired CERT because Dan renewed on Feb 22 but there was no follow up on both sides and the certs expired which led to SW no being deployed - Root cause Dan needed to follow up more closely
