--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -57,7 +57,7 @@
         "CANCEL_BTN": "ரத்து",
         "SELECT_SEC_LANG": "இரண்டாம் மொழியைத் தேர்ந்தெடுக்கவும்",
         "NO_PROJECTS": "திட்டங்கள் இல்லை.",
-        "CONFIRM_DELETE": "தயவுசெய்து இந்த திட்டத்தை நீக்க உறுதிப்படுத்து என்பதைக் கிளிக் செய்யவும்?",
+        "CONFIRM_DELETE": "தயவுசெய்து இந்த திட்டத்தை நீக்க உறுதிப்படுத்து என்பதைக் கிளிக் செய்யவும்",
         "CONFIRM_BTN": "உறுதிப்படுத்து",
         "NAME_ERROR": "பெயர் தேவை",
         "ALREADY_NAME_EXIST": "பெயர் ஏற்கனவே உள்ளது",
