--- a/docs/planning/2022/sprints/sprint 06/03-08-to-18.md
+++ b/docs/planning/2022/sprints/sprint 06/03-08-to-18.md
@@ -12,6 +12,9 @@
 
 ### General personnel updates
 
+- Rakesh was out 
+  - Friday March 11
+  - Monday March 14
 
 ### Deliverables
 
@@ -52,7 +55,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - OSS Attribution
   - (TBD) fix the AgGrid in generated applications authorization screens to use tree component
   - (TBD) fix AgGrid in generated applications user management component to add/display user images or avatar
-
+BuffTrace44!
+Blantons44!
 - Rakesh
   - REACT
     - admin pages for generated app
