--- a/docs/planning/2022/sprints/sprint 07/03-22-to-04-01.md
+++ b/docs/planning/2022/sprints/sprint 07/03-22-to-04-01.md
@@ -1,8 +1,8 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday March 22 to April 01
 
 ## Goal/notes for Sprint
 
-1. start BETA-24
+1. start BETA-32
 
 ---
 
@@ -13,11 +13,13 @@
 ### General personnel updates
 
 - Gayathri out:
-  - Friday December 17th
+  - Friday March 25th
 
 ### Deliverables
 
-- added at the end of the sprint
+- delivered the Trinchero SaaS POC
+- fixed the new website resolution and responsive issues
+
 
 ---
 
