--- a/docs/planning/2022/sprints/sprint 07/03-22-to-04-01.md
+++ b/docs/planning/2022/sprints/sprint 07/03-22-to-04-01.md
@@ -19,6 +19,8 @@
 
 - delivered the Trinchero SaaS POC
 - fixed the new website resolution and responsive issues
+- generated react end to end for the first time with the admin screens
+- generated first test of the sharable features - getItemtagsmanager
 
 
 ---
