--- a/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
+++ b/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
@@ -33,8 +33,12 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
+  - POC ability to create ad generate custom templates without any developer intervention - needed for HealthMonk
+    - as of April 10th this looks doable therefore Harish is proceeding to implement (task#1586)
 
 - Gayathri
+  - finish feature removal from UI and back end - this is here first work in Node!
+  - start wizard manager - needed for HealthMonk
 
 - Dominic
   - upgrade grapesJS to .18.04
