--- a/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
+++ b/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
@@ -26,7 +26,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Arun
   - create first video capture test of creating a screen
- 
 
 ## Developer Assignments
 
@@ -37,7 +36,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - as of April 10th this looks doable therefore Harish is proceeding to implement (task#1586)
 
 - Gayathri
-  - finish feature removal from UI and back end - this is here first work in Node!
+  - finish feature removal from UI and back end - this is her first work in Node!
   - start wizard manager - needed for HealthMonk
 
 - Dominic
@@ -50,7 +49,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Rakesh
   - finish admin screen generation for React
   - fix bugs with rest of React generation
-
 
 ---
 
