--- a/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
+++ b/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
@@ -12,7 +12,7 @@
 
 ### General personnel updates
 
-- Gayathri out:
+- The team was out on Thursday April 14 for Tamil New Year
 
 ### Deliverables
 
