--- a/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
+++ b/docs/planning/2022/sprints/sprint 33/04-05-to-04-15.md
@@ -13,6 +13,8 @@
 ### General personnel updates
 
 - The team was out on Thursday April 14 for Tamil New Year
+- Rakesh was also out on Friday April 15 (sick)
+- Domanic was also out on Friday April 15 (personal day)
 
 ### Deliverables
 
@@ -33,22 +35,26 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Harish
   - POC ability to create ad generate custom templates without any developer intervention - needed for HealthMonk
-    - as of April 10th this looks doable therefore Harish is proceeding to implement (task#1586)
+    - as of April 10th this looks doable therefore Harish is proceeding to implement (task#1586) 
+    - he also completed the React portion of this
+    - at the end of the sprint he was almost finished
 
 - Gayathri
-  - finish feature removal from UI and back end - this is her first work in Node!
+  - finish feature removal from UI and back end - this is her first work in Node! - completed
   - start wizard manager - needed for HealthMonk
+    - completed the backend portion
+    - started the UI portion
 
 - Dominic
-  - upgrade grapesJS to .18.04
+  - upgrade grapesJS to .18.04 - completed
   - start essential screen designer blocks needed HealthMonk
-    - UI Navigation block
-    - top menu block
-    - side menu block
+    - UI Navigation block  - nearly completed
+    - top menu block - todo next sprint
+    - side menu block - todo next sprint
 
 - Rakesh
-  - finish admin screen generation for React
-  - fix bugs with rest of React generation
+  - finish admin screen generation for React - nearly completed
+  - fix bugs with rest of React generation - nearly completed
 
 ---
 
