--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -52,8 +52,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - side menu block - todo next sprint (coordinate with Gayathri)
 
 - Rakesh
-  - finish admin screen generation for React - nearly completed
-  - fix bugs with rest of React generation - nearly completed
+  - finish all React generation
+  - start wizard generation (coordinate with Gayathri and Harish)
 
 ---
 
@@ -61,5 +61,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Harish
-  - stop deploying v7 of Geppetto and start deploying new version daily
+- Manavalan (is suppose to start on Monday April 18th - we have him for 30 days)
+  - finish Fargate auto deployment with Github actions (no ten container limit)
+  - finish Accounting System
+    - this is the work that Naveen was almost done with b4 he left
