--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -12,9 +12,8 @@
 
 ### General personnel updates
 
-- The team was out on Thursday April 14 for Tamil New Year
-- Rakesh was also out on Friday April 15 (sick)
-- Domanic was also out on Friday April 15 (personal day)
+- Harish
+  - was out Monday April 18th (sick)
 
 ### Deliverables
 
@@ -61,7 +60,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Manavalan (is suppose to start on Monday April 18th - we have him for 30 days)
+- Manavalan
   - finish Fargate auto deployment with Github actions (no ten container limit)
   - finish Accounting System
     - this is the work that Naveen was almost done with b4 he left
