--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -62,5 +62,5 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Manavalan
   - finish Fargate auto deployment with Github actions (no ten container limit)
-  - finish Accounting System
+  - finish gepCloudExpenseManager
     - this is the work that Naveen was almost done with b4 he left
