--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -15,6 +15,10 @@
 - Harish
   - was out Monday April 18th (sick)
 
+- added Yoges and Arjun to the team at the end of first week of the sprint
+  - Yoges has some experience in AWS but needs more hands on knowledge and will focus on Fargate, GithubActions, etc
+  - Arjun will develop the GithubActions for Azure deployment
+
 ### Deliverables
 
 - added at the end of the sprint
