--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -14,10 +14,14 @@
 
 - Harish
   - was out Monday April 18th (sick)
+- Gayathri
+  - was out Friday April 27th (sick)
 
-- added Yoges and Arjun to the team at the end of first week of the sprint
+- added Yoges, Arjun and Sangeetha to the team at the end of first week of the sprint
   - Yoges has some experience in AWS but needs more hands on knowledge and will focus on Fargate, GithubActions, etc
+  - Sangeetha started with only 2 days left in the sprint
   - Arjun will develop the GithubActions for Azure deployment
+    - he has not been fully engaged due to other projects
 
 ### Deliverables
 
