end of sprint 34 and start of sprint 35 notes

--- a/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
+++ b/docs/planning/2022/sprints/sprint 34/04-19-to-04-29.md
@@ -25,7 +25,7 @@
 
 ### Deliverables
 
-- added at the end of the sprint
+- going forward the deliverables status at the end of the sprint will be tagged with: "end-of-sprint-results:" and the updates for the task will be given next to the task
 
 ---
 
@@ -45,22 +45,24 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Harish
   - finish custom template generation work
   - start the Vault work
-    - generated apps
-    - geppetto
+    - generated apps - end-of-sprint-results: hit multiple snags but is getting close
+    - geppetto end-of-sprint-results: this will be TBD
+  - worked with taking over Manavalan generation work for auto-deloyment of apps with more than ten (10) microservices
 
 - Gayathri
-  - finish wizard manager
+  - finish wizard manager - end-of-sprint-results: completed the UI and the MicroService
   - help dominic finish his portions of Healthmonk inspired components
-    - top or side navigation block (coordinate with Dominic)
+    - top or side navigation block (coordinate with Dominic) - end-of-sprint-results: she completed her portion of this
 
 - Dominic
-  - finish UI Navigation block
-  - top menu block - start and finish (coordinate with Gayathri)
-  - side menu block - todo next sprint (coordinate with Gayathri)
+  - finish UI Navigation block - end-of-sprint-results: completed
+  - top menu block - start and finish (coordinate with Gayathri) - end-of-sprint-results: completed
+  - side menu block - todo next sprint (coordinate with Gayathri) - end-of-sprint-results: TBD Dan to speak with him, but it was preempted by the footer navigation
+  - footer navigation - end-of-sprint-results: came close but we hit an issue with "default" links he is working on it
 
 - Rakesh
-  - finish all React generation
-  - start wizard generation (coordinate with Gayathri and Harish)
+  - finish all React generation - end-of-sprint-results: he completed what we knew at the time BUT SEF was not completed
+  - TBD - start wizard generation (coordinate with Gayathri and Harish)
 
 ---
 
