--- a/docs/planning/2022/sprints/sprint 35/05-03-to-05-13.md
+++ b/docs/planning/2022/sprints/sprint 35/05-03-to-05-13.md
@@ -1,8 +1,8 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday May 03 to May 13
 
 ## Goal/notes for Sprint
 
-1. start BETA-24
+1. start BETA-35
 
 ---
 
@@ -15,47 +15,42 @@
 - Gayathri out:
   - Friday December 17th
 
-### Deliverables
-
-- added at the end of the sprint
-
 ---
 
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Arjun
+  - finish the mobile screens for HealthMonk
+  - MAYBE - second week of sprint (Monday May 9th) start to create Healthmonk screens in Geppetto - DO NOT start this until Gayathri and Harish all both say that you can start
+    - capture video for all screen that you create in Geppetto
+    - you must use Dan's credentials in Geppetto to create HealthMonk
+
 - Ajith
-  - work with Surrender and Gayathri
-    - need to create screens like Grapedrop - what is missing? do this by using the electricglide screens
-    - start to work on ideas for Geppetto website using the 10d color scheme 
+  - complete Finance template
+  - collaborate with Arjun on responsive design of HealthMonk
+  - discuss with Dan Geppetto LinkedIn marketing page
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - work on GCAM
-    - finish GCAM against gjs based screens
-    - authorization screen - adding ability to update the roles assigned to screens - as of Friday December 17th - this proved challenging with agGrid tre view
-  - clean up the Admin menu in all templates
-    - admin menu should NOT be have a sub0menu instead it should launch the Admin page
-  - special pivot for second weeks of sprint 
-  this is due to the progress made by Surrender in adding latest version of gjs (.17.29) and working with Ajith and Gayathri to improve the ability of screen designer to create screens that are close to what is possible in GrapeDrop (example is the electric glide)
-    - test the Angular v13 generator with Surrender for its ability to support gjs (CSS/HTML) with gjs version .17.29
-
-- Surrender
-  - focus on screen designer and KT
-  
-- Saranya
-  - work on user management for generated applications
+  - help Manavalan finish auto deployment
+  - finish Vault integration for generated applications
   
 - Gayathri
-  - GrapesJS kt
-  - version .17.29 using agGrid component prepare separate repo to be used for marketing (medium/video)
-  - work with Ajith on GrapeDrop KT as an example of what screen designer should approximate
-  - test Geppetto code with .17.29
+  - gepExpenseManager
+  - gepCloudExpense Manager
 
+- Dominic
+  - finish links in footer block
+  - research issue with mobile/responsive screens
+
+- Rakesh
+  - finish React generation - except for authorization
+  - start generation with latest React version 18.x
 
 ---
 
@@ -63,5 +58,19 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Harish
-  - stop deploying v7 of Geppetto and start deploying new version daily
+- Manavalan
+  - finish auto deployment with apps greater than 10 Microservices to Fargate
+  - finish api work to capture with the billing system in aws which will feed gepCloudExpenseManager
+
+- Yoges
+  - deploy Geppetto daily
+  - install Geppetto in local
+  - generate and run applications locally
+  - learn Markdown
+  - create FAQ doc of issues with local install of Geppetto
+
+- Sangeetha
+  - install Geppetto in local
+  - generate and run applications locally
+  - learn Markdown
+  - collaborate with Yoges on FAQ doc of issues with local install of Geppetto
